All functionallity working
