# games/app/Http/Controllers/AuthorController.php
@@ -7,11 +7,34 @@ use Illuminate\Http\Request;
 
 class AuthorController extends Controller
 {
+    
+    
     /**
+    * @OA\Get(
+ *     path="/api/authors",
+ *     description="Displays all the authors",
+ *     tags={"Authors"},
+     *      @OA\Response(
+        *          response=200,
+        *          description="Successful operation, Returns a list of Games in JSON format"
+        *       ),
+        *      @OA\Response(
+        *          response=401,
+        *          description="Unauthenticated",
+        *      ),
+        *      @OA\Response(
+        *          response=403,
+        *          description="Forbidden"
+        *      )
+ * )
      * Display a listing of the resource.
+     *
      *
      * @return \Illuminate\Http\Response
      */
+
+
+
     public function index()
     {
         //
